src/test/ui/lifetime-before-type-params.stderr
error: incorrect parameter order
  --> $DIR/lifetime-before-type-params.rs:3:9
   |
LL | fn first<T, 'a, 'b>() {}
   |         ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: incorrect parameter order
  --> $DIR/lifetime-before-type-params.rs:4:10
   |
LL | fn second<'a, T, 'b>() {}
   |          ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: incorrect parameter order
  --> $DIR/lifetime-before-type-params.rs:5:9
   |
LL | fn third<T, U, 'a>() {}
   |         ^^^^^^^^^^ help: reorder the parameters: `<'a, T, U>`

error: incorrect parameter order
  --> $DIR/lifetime-before-type-params.rs:6:10
   |
LL | fn fourth<'a, T, 'b, U, 'c, V>() {}
   |          ^^^^^^^^^^^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, 'c, T, U, V>`

error: aborting due to 4 previous errors

